0.3.0
Done code completion.
Launches correct version of pprgressbar.
Launches correct version (gtk2/3) from menu's new editor/new root editor.
Auto appends "-3" to name of executable's when installing for gtk3.
Removed split document view options.
Done bookmarks.
Fixed minor bug not scrolling to line when jumping to function in file that needs to be opened.
Redone 'Go Back'.
Moved some routines to widget callbacks.
Redone setting menus/toolbar items sensitive.
Fixed some memory leaks when closing tabs.
Fixed jump to line entry box size.
Fixed occasional segfault on quiting when certain plugins enabled.
Added update-icons target to top Makefile.
Added hack to get round weird bug in gtksourceview-3.0 >3.14.0 not always getting correct undo/redo setting, menus for pkgs > 3.14.0 are not dimmed.
Fixed dNd for toolitems in prefs.
Done prefs.
Moved prefs to either ~/.KKEdit or ~/.KKEdit3 depending on build.
Done doc viewer.
Open external apps done.
Basic navigation done.
Main menus done.
Started gtk3 enabled.

0.2.12
Fixed occasional bug when runing certain tools on files with no language type.
Removed forced CFLAGS and CXXFLAGS.

0.2.11
Started on remote control using "kkedit @@Xddd" where X=G - goto line, X=S - search for define, and ddd is data ( line number search string.
Standardized source file copyright/licence headers.
Fixed undo/redo all.
Fixed regex anchors not always working for replace all.
Corrected icon entry in desktop files.
Updated 'Comment Selection' example tool to include commenting - sh, Python, Makefile, .desktop, Perl, C++, C, Objective-C, C/C++/ObjC Header, Java, Pascal, HTML.
Updated open file with line number to scroll to line num immediately.
Added optional switching to line number when opening file using /path/to/file@LINENUM.
Minor doxy documentation fix.

0.2.10
Fixed changed callback definition when closing.
Fixed toolbar button setsensitive on startup.
More tweaks for'Search For Define'.
Added email address to copyright notice in about box.