@@ -5,8 +5,15 @@ remake:
 	$(shell ./remakesourcelist)
 	
 uninstall-hook:
-	rm -f $(DESTDIR)${prefix}/share/applications/KKEdit.desktop $(DESTDIR)${prefix}/share/pixmaps/KKEdit.png $(DESTDIR)${prefix}/share/icons/hicolor/256x256/apps/KKEdit.png $(DESTDIR)${prefix}/share/icons/hicolor/256x256/apps/KKEditRoot.png $(DESTDIR)${prefix}/share/icons/hicolor/256x256/apps/KKEditPlug.png  $(DESTDIR)${prefix}/share/pixmaps/KKEditPlug.png
-	rm -fr $(pkgdatadir)
+	rm -f $(DESTDIR)${prefix}/share/applications/KKEdit.desktop
+	rm -f $(DESTDIR)${prefix}/share/applications/KKEditRoot.desktop
+	rm -f $(DESTDIR)${prefix}/share/pixmaps/KKEdit.png
+	rm -f $(DESTDIR)${prefix}/share/icons/hicolor/128x128/apps/KKEdit.png
+	rm -f $(DESTDIR)${prefix}/share/icons/hicolor/128x128/apps/KKEditRoot.png
+	rm -f $(DESTDIR)${prefix}/share/icons/hicolor/128x128/apps/KKEditPlug.png
+	rm -f $(DESTDIR)${prefix}/share/pixmaps/KKEditPlug.png
+	rm -f $(DESTDIR)${prefix}/share/pixmaps/KKEditPlugMenu.png
+	rm -fr  $(DESTDIR)$(pkgdatadir)
 
 update-icons:
 	gtk-update-icon-cache -q -t -f /usr/share/icons/hicolor
